# caustic

./: .gitignore  BENCHMARK_GUIDE.md  INVESTIGATION_SUMMARY.md  MESH_SAMPLER_OPTIMIZATION.md  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_IMPROVEMENTS.md  OPTIMIZATION_SUMMARY.md  PATHOGEN_DATABASE.md  QUICK_START.txt  RESULTS_FORMAT.md  SETUP_COMPLETE.md  TIMING_INSTRUMENTATION.md  TIMING_QUICK_REFERENCE.txt  VISUALIZATION_DEBUG_REPORT.md  VISUAL_EXPLANATION.md  WEB_APP_OPTIMIZATION.md  build.sh  debug_visualization.py  download_data.py  package.json  pyproject.toml  simulation_results.json  specification.md  test_pathogen_db.py  tsconfig.json
site/: README.md
site/backend/: benchmark.py  download_settings.py  requirements.txt  start.sh  test.py
site/frontend/: _headers  config.js  index.html  index.js  main.js  room.json  triangles.html  triangles.js
site/frontend/settings/: room.json  small_room.json
src/: __init__.py  index.ts
src/caustic/: __init__.py
src/caustic/core/: __init__.py  lamp_profiles.py  light.py  ray.py  triangle.py
src/caustic/data/: __init__.py  (+5 more)
src/core/: light.ts  ray.ts  triangle.py  triangle.ts  vector.py  vector.ts
src/data/: __init__.py  pathogen_db.py
src/examples/: __init__.py  run_simple_simulation.py  run_simple_simulation.ts  simple_room.py  simple_room.ts
src/io/: results.py
src/raytracing/: __init__.py  intersect.py  intersect.ts  tracer.ts
src/simulation/: __init__.py  intensity.py  intensity.ts  pathogen.ts  photon_tracing.py
src/spatial/: grid.ts
vis/site/: index.html  simulation_results.json  triangles.js
(+22 files in other folders)
